# oalsfxpp

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  config.h  oal_effects_pp.c  oal_effects_pp.cpp  oal_effects_pp.sln  oal_effects_pp.vcxproj  oal_effects_pp.vcxproj.filters  oal_effects_pp_test.cpp  oalsfxpp.cpp  oalsfxpp.h  oalsfxpp_api_impl.cpp  oalsfxpp_api_impl.h  oalsfxpp_test.cpp  version.h
Alc/: ALc.c  ALc.cpp  ALu.c  ALu.cpp  alcRing.c  alstring.h  bformatdec.c  compat.h  helpers.c  hrtf.c  hrtf.h  mastering.c  mastering.cpp  mixer.c  mixer.cpp  mixer_c.c  mixer_c.cpp  mixer_defs.h  panning.c  panning.cpp
Alc/backends/: base.c  base.h  null.c
Alc/effects/: chorus.c  chorus.cpp  compressor.c  compressor.cpp  dedicated.c  dedicated.cpp  distortion.c  distortion.cpp  echo.c  echo.cpp  equalizer.c  equalizer.cpp  flanger.c  flanger.cpp  modulator.c  modulator.cpp  null.c  null.cpp  reverb.c  reverb.cpp
OpenAL32/: alAuxEffectSlot.c  alAuxEffectSlot.cpp  alBuffer.c  alEffect.c  alEffect.cpp  alError.c  alFilter.c  alFilter.cpp  alListener.c  alSource.c  alSource.cpp  alState.c  alThunk.c  sample_cvt.c
OpenAL32/Include/: alAuxEffectSlot.h  alBuffer.h  alEffect.h  alFilter.h  alListener.h  alMain.h  alSource.h  alu.h
common/: align.h  almalloc.c  almalloc.h  bool.h  math_defs.h  rwlock.c  rwlock.h  static_assert.h  uintmap.c  uintmap.h
include/AL/: al.h  alc.h  alext.h  efx.h
src/: CMakeLists.txt  oalsfxpp.cpp  oalsfxpp.h  oalsfxpp_test.cpp
